<resources>
    <string name="app_name">Industry4Medical</string>
    <!--
    This string is used for square devices and overridden by hello_world in
    values-round/strings.xml for round devices.
    -->
    <string name="hello_world">Hello Square World!</string>
    <string name="title_activity_logi_in">LogiInActivity</string>
    <string name="log_in_to_your_account">Log in to your account</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="i4m">I4M</string>
    <string name="go_to_app">Go to App</string>
    <string name="lt"><![CDATA[<]]></string>
    <string name="login">Login</string>
    <string name="title_activity_get_sleep_data">GetSleepDataActivity</string>
    <string name="recording">Recording…</string>
    <string name="acc">ACC</string>
    <string name="hr">HR</string>
    <string name="title_activity_menu">MenuActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="MenuStart">Start</string>
    <string name="MenuBack">Back</string>
</resources>