<?xml version="1.0" encoding="utf-8"?>
<androidx.wear.widget.BoxInsetLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/box_inset_layout_padding"
    tools:context=".GetSleepDataActivity"
    tools:deviceIds="wear">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/frameLayout3"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#FFEBEE"
        app:layout_boxedEdges="all">

        <TextView
            android:id="@+id/sensorsheaderText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/recording"
            android:textColor="#1976D2"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.03" />

        <TextView
            android:id="@+id/accText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/acc"
            android:textColor="#1976D2"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.496"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/sensorsheaderText"
            app:layout_constraintVertical_bias="0.221" />

        <TextView
            android:id="@+id/hrText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hr"
            android:textColor="#1976D2"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.496"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/accText"
            app:layout_constraintVertical_bias="0.4" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.wear.widget.BoxInsetLayout>